[gd_scene load_steps=2 format=3 uid="uid://boe3il6xv2rho"]

[ext_resource type="Script" path="res://scenes/lobby/lobby.gd" id="1_bobmh"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bobmh")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SessionName" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
horizontal_alignment = 1

[node name="PlayerList" type="VBoxContainer" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="StartButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Start"

[node name="LeaveButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Leave"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/LeaveButton" to="." method="_on_leave_button_pressed"]
